working fine, datas stored hardly

--- a/login2.html
+++ b/login2.html
@@ -108,6 +108,7 @@
                             clientDataJSON: base64url_encode(clientDataJSON),
                         },
                     };
+                    //alert("rawID: " + base64url_encode(rawId) + "credential.id: " + credential.id);
                     return fetch('/finish', {
                         method: 'POST',
                         headers: {
