Working fine now, begin refactoring

--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Registration Form</h2>
+        <h2>Login Form</h2>
         <form action="/postLogin" method="POST">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
