--- a/static/register.html
+++ b/static/register.html
@@ -65,6 +65,7 @@
             <input type="password" id="password" name="password" required>
             <input type="submit" value="Register">
         </form>
+        <a href="/login">Login</a>
     </div>
 </body>
 </html>
